turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:22: error: value % is not a member of java.awt.Color
	marqueSol(colors(x+1)%color.length)
                             ^